@@ -121,6 +121,87 @@ class SBSkillParser extends SBParserBase {
     }
 }
 
+class SBSpeedParser extends SBParserBase {
+    async parse(key, value) {
+
+        const values = SBUtils.splitEntries(value);
+
+        const speedData = {
+            land: { base: 0 },
+            flying: { base: 0, baseManeuverability: 0 },
+            swimming: { base: 0 },
+            burrowing: { base: 0 },
+            climbing: { base: 0 },
+            special: "",
+            mainMovement: ""
+        };
+
+        for (const entry of values) {
+            const unitRemoved = entry.replace("ft.", "").trim();
+            const parsedSubtext = SBUtils.parseSubtext(unitRemoved);
+
+            const speed = parsedSubtext[0].split(' ');
+            if (speed.length == 1) {
+                const numericSpeed = Number(speed[0]);
+                if (!Number.isNaN(numericSpeed)) {
+                    speedData.land.base = numericSpeed;
+                    if (!speedData.mainMovement) {
+                        speedData.mainMovement = "land";
+                    }
+                } else {
+                    speedData.special = speed[0];
+                }
+            } else {
+                const speedKey = speed[0];
+                const numericSpeed = Number(speed[1]);
+                if (speedKey === "fly") {
+                    speedData.flying.base = numericSpeed;
+                    if (SBUtils.stringContains(entry, "clumsy", false)) {
+                        speedData.flying.baseManeuverability = -1;
+                    } else if (SBUtils.stringContains(entry, "perfect", false)) {
+                        speedData.flying.baseManeuverability = 1;
+                    }
+
+                    if (!speedData.mainMovement) {
+                        speedData.mainMovement = "flying";
+                    }
+                } else if (speedKey === "swim") {
+                    speedData.swimming.base = numericSpeed;
+                    
+                    if (!speedData.mainMovement) {
+                        speedData.mainMovement = "swimming";
+                    }
+                } else if (speedKey === "burrow") {
+                    speedData.burrowing.base = numericSpeed;
+                    
+                    if (!speedData.mainMovement) {
+                        speedData.mainMovement = "burrowing";
+                    }
+                } else if (speedKey === "climb") {
+                    speedData.climbing.base = numericSpeed;
+                    
+                    if (!speedData.mainMovement) {
+                        speedData.mainMovement = "climbing";
+                    }
+                } else {
+                    if (speedData.special) {
+                        speedData.special += "; ";
+                    }
+                    speedData.special += entry;
+                    
+                    if (!speedData.mainMovement) {
+                        speedData.mainMovement = "special";
+                    }
+                }
+            }
+        }
+
+        const parsedData = {};
+        parsedData["data.attributes.speed"] = speedData;
+        return {actorData: parsedData};
+    }
+}
+
 class SBSkillsParser extends SBParserBase {
     async parse(key, value) {
         let parsedData = {};
@@ -307,22 +388,18 @@ class SBTraitParser extends SBParserBase {
     }
 
     async parse(key, value) {
-        let parsedValues = {"value": [], "custom": ""};
+        const parsedValues = {"value": [], "custom": ""};
 
-        //SBUtils.log("Parsing trait: " + key + ", supported: " + this.supportedValues);
-
-        let values = SBUtils.splitEntries(value);
-        for (let traitValue of values) {
-            let splitTrait = traitValue.trim().toLowerCase().split(' ');
+        const values = SBUtils.splitEntries(value);
+        for (const traitValue of values) {
+            const splitTrait = traitValue.trim().toLowerCase().split(' ');
             
-            let traitName = splitTrait[0]
-            let traitModifier = splitTrait.length > 1 ? splitTrait[1] : null;
+            const traitName = splitTrait[0]
+            const traitModifier = splitTrait.length > 1 ? splitTrait[1] : null;
 
-            //SBUtils.log("Trait: " + traitName + ", supported: " + this.supportedValues.includes(traitName));
             if (this.supportedValues.includes(traitName)) {
                 if (traitModifier != null) {
-                    let trait = {};
-                    trait[traitName] = traitModifier;
+                    const trait = {[traitName]: traitModifier};
                     parsedValues.value.push(trait);
                 } else {
                     parsedValues.value.push(traitName);
@@ -335,7 +412,7 @@ class SBTraitParser extends SBParserBase {
             }
         }
 
-        let actorData = {};
+        const actorData = {};
         actorData[this.traitField] = parsedValues;
         return {actorData: actorData};
     }
@@ -347,8 +424,12 @@ class SBLanguagesParser extends SBTraitParser {
     }
 
     async parse(key, value) {
-        value = value.toLowerCase().replace("lashunta", "castrovelian");
-        return super.parse(key, value);
+        if (value) {
+            value = value.toLowerCase().replace("lashunta", "castrovelian");
+            return super.parse(key, value);
+        } else {
+            return {};
+        }
     }
 }
 
@@ -871,6 +952,8 @@ export function initParsers() {
     if (SBParserMapping.parsers) {
         return;
     }
+
+    const speedVersion = game.system.data.version.localeCompare("0.12.0", undefined, { numeric: true, sensitivity: 'base' }) >= 0;
     
     SBParserMapping.parsers = {
         "base": {
@@ -889,7 +972,7 @@ export function initParsers() {
             "ref": new SBSingleValueParser(["data.attributes.reflex.bonus"]),
             "will": new SBSingleValueParser(["data.attributes.will.bonus"]),
             "sr": new SBSingleValueParser(["data.traits.sr"], false),
-            "dr": new SBSplitValueParser(["data.traits.damageReduction.value", "data.traits.damageReduction.negatedBy"], "/"),
+            "dr": new SBSplitValueParser(["data.traits.damageReduction.value", "data.traits.damageReduction.negatedBy"], "/", false),
             "resistances": new SBTraitParser("data.traits.dr", Object.keys(CONFIG["SFRPG"].energyDamageTypes).map(x => x.toLowerCase())),
             "resist": new SBTraitParser("data.traits.dr", Object.keys(CONFIG["SFRPG"].energyDamageTypes).map(x => x.toLowerCase())), // Hero Lab support
             "weaknesses": new SBWeaknessesParser(),
@@ -897,7 +980,7 @@ export function initParsers() {
             "defensive abilities": new SBAbilityParser()
         },
         "offense": {
-            "speed": new SBSplitValueParser(["data.attributes.speed.value", "data.attributes.speed.special"], ",", false),
+            "speed": speedVersion ? new SBSpeedParser() : new SBSplitValueParser(["data.attributes.speed.value", "data.attributes.speed.special"], ",", false),
             "melee": new SBAttackParser(true),
             "ranged": new SBAttackParser(false),
             "multiattack": new SBAttackParser(true, true),
